--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
   /*]]>*/-->
 </style>
 
-<script type="text/javascript" src="http://orgmode.org/org-info.js">
+
+<script type="text/javascript" src="./org-info.js">
 /**
  *
  * @source: http://orgmode.org/org-info.js
